Fix for bug #9894 (Negative numbers are allowed to 'unsigned' column)